--- a/Lesson 3 - Texts/text.html
+++ b/Lesson 3 - Texts/text.html
@@ -1,4 +1,8 @@
-<style>
+<!DOCTYPE html>
+<html>
+<head>
+    <title>Texts</title>
+  <style>
 
   p{
     font-family: Arial;
@@ -47,7 +51,9 @@
   }
 </style>
 
-<p class="video-title">
+</head>
+<body>
+  <p class="video-title">
   Talking Tech and AI with Google CEO Sundar Pichai!
 </p>
 
@@ -62,8 +68,13 @@
 <p class="video-description">
   Talking tech and AI on the heels of Google I/O. Also a daily driver phone reveal from Google's CEO. Shoutout to Sundar!
 </p>
-
-<p class="apple-text">
+  <p class="apple-text">
   Shop early for the best of holiday favourites. <span class="shop-link">Shop now &#62;</span>
 </p>
+
+</body>
+</html>
+
+
+
 
