--- a/Lesson 4 - Structure/6d.html
+++ b/Lesson 4 - Structure/6d.html
@@ -8,10 +8,10 @@
   </head>
   
   <body>
-    <p>
+    <p class="heading">
       Model 3
     </p>
-    <p> Order Online for <span>Touchless Delivery</span>
+    <p class="text"> Order Online for <span class="subtext">Touchless Delivery</span>
     </p>
   </body>
 </html>
