--- a/Lesson - 4 Images and Text Boxes/7g.html
+++ b/Lesson - 4 Images and Text Boxes/7g.html
@@ -37,7 +37,7 @@
   </style>
 </head>
 <body>
-  <img class="profile" src="/Lesson - 4 Exercise/thumbnail-1.webp">
+  <img class="profile" src="/Lesson - 4 Images and Text Boxes/thumbnail-1.webp">
   <input class="text-box" type="text" placeholder="What's happening?">
   <button class="tweet-button">Tweet</button>
 </body>
